# zyra

./: .gitignore  DEPLOYMENT.md  README.md  STARTUP_GUIDE.md  package-lock.json  package.json
backend/: .env  alembic.ini  env.example  pyproject.toml  requirements.txt  run.py  simple_main.py  test_main.py
backend/alembic/: env.py
backend/alembic/versions/: ae6e3cdc180e_initial_migration.py  b5b230a4af75_rename_schema_to_data_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: advanced_analytics.py  analytics.py  analytics_config.py  api.py  auth.py  data.py  datasets.py  ml.py  projects.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  analysis.py  analytics_config.py  data_cleaning.py  dataset.py  ml_model.py  project.py  user.py
backend/app/schemas/: analytics_config.py  dataset.py  project.py  user.py
backend/app/services/: advanced_analytics.py  advanced_analytics_service.py  analytics_service.py  data_processing_service.py  ml_service.py  supabase_service.py  visualization_service.py
documentation/: documents.txt  nextsteps.txt  steps.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/datasets/: index.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/lib/: api.ts  auth.tsx  utils.ts
(+12 files in other folders)
